--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,13 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  padding-top: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+}
 
-  /*
-   * CSS image reference example.
-   */
-  background-image: url('./images/bg-pattern.png');
+button[type='button'] {
+  width: 20rem;
+  font-size: 1.25rem;
+  cursor: pointer;
 }
